--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,15 @@ target/
 .springBeans
 .sts4-cache
 
+# Fichiers de configuration contenant des credentials
+.env
+.env.local
+.env.*.local
+*.env
+
+# Fichiers de configuration de Spring Boot
+src/main/resources/application.properties
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
