feat: Add Rental model, repository, service, and controller fix: Update pom.xml for proper Lombok integration feat: Integrate and configure Cloudinary for image storage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # JWT CONFIGURATION
 jwt.secret=${JWT_SECRET}
+
+# CLOUDINARY CONFIGURATION
+cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.api_secret=${CLOUDINARY_API_SECRET}
