--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=ChaTop
 
+# CONNECT TO THE FRONT
+server.port=3001
+
 # DATABASE CONFIGURATION
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
